Annual Report: Link styling
The links have a global style on the website and we need new classes to override and then need to use them.

--- a/src/input.css
+++ b/src/input.css
@@ -1,6 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#main .text-white {
+	--tw-text-opacity: 1;
+	color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+#main .text-black {
+	--tw-text-opacity: 1;
+	color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+#main .font-normal {
+	font-weight: 400;
+}
+#main .no-underline {
+	text-decoration: none;
+}
+
 .hideme {
 	display: none;
 }
