Global: The 'collapse' class is in use.
This override prevents the tailwind css from hiding the nav on the tristate website.

--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+nav .collapse {
+	visibility: visible;
+}
 #main a.text-white,
 #main a.text-white:hover {
 	--tw-text-opacity: 1;
