--- a/src/input.css
+++ b/src/input.css
@@ -11,10 +11,19 @@ nav .collapse {
 	color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+#main a.text-white:hover {
+	--tw-text-opacity: 1;
+	color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
 #main a.text-black,
 #main a.text-black:hover {
 	--tw-text-opacity: 1;
 	color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+#main a.text-black:hover {
+	--tw-text-opacity: 1;
+	color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
 }
 
 #main .font-normal {
