Tailwind: Add 'border' back as class.
Disabling preflight means we can't use 'border'.  This adds it back.

--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.border {
+	border-width: 1px;
+	border-style: solid;
+}
 nav .collapse {
 	visibility: visible;
 }
