feat(component): Fix button hover styling

--- a/components/content/centered-text-section.htm
+++ b/components/content/centered-text-section.htm
@@ -19,7 +19,7 @@
 		<!-- Remove this p tag if you don't need a CTA -->
 		<p>
 			<a href="/your-link-here"
-				class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
+				class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
 				Your CTA Text
 			</a>
 		</p>
