--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,5 @@
 @import './custom/block-expandable.css';
+@import './custom/grid-leadership.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
