--- a/src/custom/grid-leadership.css
+++ b/src/custom/grid-leadership.css
@@ -1,10 +1,5 @@
 @layer components {
-	/* Grid layout configurations */
-	[data-leadership] {
-		@apply grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4;
-	}
-
-	/* Bio expansion behavior */
+	/* Bio expansion behavior on mobile devices. */
 	[data-bio] {
 		display: grid;
 		grid-template-rows: 0fr;
