--- a/src/custom/grid-leadership.css
+++ b/src/custom/grid-leadership.css
@@ -25,6 +25,7 @@
 		that is built the same way works fine. 
 	*/
 	.grid-cover {
+		transform: scale(1.1);
 		@apply absolute inset-0 -z-10 bg-white opacity-0 transition-opacity duration-300;
 	}
 	[data-leadership].has-active .grid-cover {
