--- a/components/interactive/slider/slider-component.htm
+++ b/components/interactive/slider/slider-component.htm
@@ -1,12 +1,13 @@
 <!-- Slider -->
-<section class="min-h-96 sm:min-h-[400px]"><!-- Slider main container -->
-	<div class="swiper h-[400px]">
+<section style="--swiper-theme-color: #3d4d55; --swiper-pagination-bottom: auto">
+	<!-- Slider main container -->
+	<div class="swiper h-[432px] pb-8">
 		<!-- Additional required wrapper -->
 		<div class="swiper-wrapper"><!-- Slides -->
 
 		</div>
 
-		<div class="swiper-pagination">&nbsp;</div>
+		<div class="swiper-pagination h-8">&nbsp;</div>
 		<div class="swiper-button-prev">&nbsp;</div>
 		<div class="swiper-button-next">&nbsp;</div>
 	</div>
