feat(swiper): change to global vars

--- a/components/interactive/slider/slider-component.htm
+++ b/components/interactive/slider/slider-component.htm
@@ -1,5 +1,5 @@
 <!-- Slider -->
-<section style="--swiper-theme-color: #3d4d55; --swiper-pagination-bottom: auto">
+<section>
 	<!-- Slider main container -->
 	<div class="swiper h-[432px] pb-8">
 		<!-- Additional required wrapper -->
