--- a/src/input.css
+++ b/src/input.css
@@ -10,6 +10,10 @@ body {
 	font-size: 16px;
 }
 
+body:has(dialog[open]) {
+	overflow: hidden;
+}
+
 * {
 	transition: none;
 	transition-duration: 0s;
